# site

./: Makefile  app.py  home.html  pyproject.toml
1/: administrativnie.html  arbitr.html  avto.html  citizens.html  consultation.html  criminal.html  housing.html  inheritance.html  military.html  tax.html
1/assets/mobirise/css/: mbr-additional.css
1/assets/theme/js/: script.js
assets/images/: hashes.json
assets/mobirise/css/: mbr-additional.css
assets/theme/js/: script.js
site/: app.py
site/templates/: base.html  contacts.html  news.html
static/: styles.css
static/images/: hashes.json
static/mobirise/css/: mbr-additional.css
static/theme/js/: script.js
templates/: about.html  administrativnie.html  arbitr.html  avto.html  base.html  citizens.html  consultation.html  consumers.html  contact.html  criminal.html  family.html  home.html  housing.html  inheritance.html  labor.html  military.html  news.html  reviews.html  specialization.html  tax.html
для переноса/: administrativnie.html  avto.html  consultation.html  contact.html  home.html  reviews.html  specialization.html
для переноса/assets/images/: hashes.json
для переноса/assets/theme/js/: script.js
